--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -15,73 +15,40 @@ nav {
   padding: 20px; 
 }
 
-// svg loader
-.scene {
+// Profile container
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: auto;
+  text-align: center;
+  font-size: 14px;
+}
+
+.card-footer {
+  background-color: transparent;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: black;
+  text-align: center;
+  cursor: pointer;
   width: 100%;
-  height: 100%;
-  perspective: 600;
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  
-  svg{
-  width: 240px;
-  height: 240px;  
+  font-size: 18px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  &:hover {
+    text-decoration: none;
   }
 }
 
-.dc-logo {
-  position: fixed;
-  right: 10px;
-  bottom: 10px;
-}
 
-.dc-logo:hover {
-  svg{
-  transform-origin: 50% 50%;
-  animation: arrow-spin 2.5s 0s cubic-bezier(0.165, 0.840, 0.440, 1.000) infinite;
-  }
- &:hover{
-   &:before {
-  content:'\2764';
-  padding: 6px;
-  font: 10px/1 Monaco, sans-serif;
-  font-size:10px;
-  color: #00fffe;
-  text-transform:uppercase;
-  position: absolute;
-  left: -70px;
-  top: -30px;
-  white-space: nowrap;
-  z-index: 20px;
-  box-shadow: 0px 0px 4px #222;
-  background:rgba(0,0,0,0.4);
-}
-&:after {
-  content:'Digital Craft';
-  padding: 6px;
-  font: 10px/1 Monaco, sans-serif;
-  font-size:10px;
-  color: #6E6F71;
-  text-transform:uppercase;
-  position: absolute;
-  right: 0;
-  top: -30px;
-  white-space: nowrap;
-  z-index: 20px;
-  box-shadow: 0px 0px 4px #222;
-  background:rgba(0,0,0,0.4);
-  background-image:none;
-  }
- }
-}
-
-@keyframes arrow-spin {
-  50% {
-    transform: rotateY(360deg);
-  }
+button:hover, a:hover {
+  opacity: 0.7;
 }
