--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -4,3 +4,15 @@ nav {
     font-size: 15px !important;
   }
 }
+
+.search-section {
+  .active-repo-radio {
+    background-color: blue;
+  }
+  &.search-not-done {
+    padding-top: 30vh;
+  }
+  &.search-done {
+    padding-top: 0vh;
+  }
+}
